--- a/src/app/pages/service-orchestration/orchestration/orchestration.component.css
+++ b/src/app/pages/service-orchestration/orchestration/orchestration.component.css
@@ -39,13 +39,15 @@ th{
   font-size: 18px !important; */
   background-color: #e8f7fd !important;
     color: #00a0e3 !important;
-    font-size: 15px !important;
+    font-size: 14px !important;
     text-align: left !important;
     border-top: none !important;
     border-bottom: 1px solid #4a4a4a33 !important;
     padding: 8px 10px;
 }
-
+td {
+  font-size: 13px;
+}
 tr.mat-header-row {
   height: 45px !important;
 }
@@ -110,7 +112,7 @@ tr.mat-header-row {
 
 
  #Orchestration-tabs  .mat-tab-label .mat-tab-label-content{
-  color:black ;
+  color: #001c47 ;
   font-weight: 700 !important;
   font-size: 15px !important;
 }
@@ -119,10 +121,7 @@ tr.mat-header-row {
 
 
 #Orchestration-tabs .mat-tab-label-active .mat-tab-label-content {
-  background-color: white !important;
-  color:rgb(0, 98, 207) !important ;
-  font-weight: 700 !important;
-  font-size: 15px !important;
+  color: #00a0e3 !important ;
 }
 
 /* newstyles */
@@ -161,6 +160,7 @@ tr.mat-header-row {
 }
 .orches_new .mat-tab-label {
   padding: 0px 15px !important;
+  background-color: transparent !important;
 }
 .mat-form-field.mat-focused .mat-form-field-label {
   color: #0062cf;
@@ -276,4 +276,11 @@ body .leftfporm select {
   position: absolute;
   right: 10px;
   top: 8px;
+}
+
+.so-subtab-header mat-tab-header.mat-tab-header {
+  background-color: #e8f7fd;
+}
+.so-sub-tab-content {
+  padding-top: 10px;
 }
